--- a/index.html
+++ b/index.html
@@ -131,26 +131,34 @@
             <h2>Proyek dan Tugas Terbaru</h2>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/400x200.png?text=Proyek+1" alt="Gambar Proyek 1">
+                    <img src="https://via.placeholder.com/400x200.png?text=LaluLintasKu+-+Siap" alt="Gambar LaluLintasKu - Statistik & Laporan">
                     <div class="portfolio-item-content">
-                        <h3>Desain Aplikasi Mobile</h3>
-                        <p>Tugas ini berfokus pada perancangan antarmuka pengguna (UI) untuk aplikasi mobile.</p>
+                        <h3>LaluLintasKu — Statistik & Laporan</h3>
+                        <p>Ini adalah bagian dari proyek LaluLintasKu yang sudah siap digunakan untuk analisis statistik dan pelaporan data.</p>
                     </div>
                 </div>
 
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/400x200.png?text=Proyek+2" alt="Gambar Proyek 2">
+                    <img src="https://via.placeholder.com/400x200.png?text=LaluLintasKu+-+Demo" alt="Gambar LaluLintasKu - Demo">
                     <div class="portfolio-item-content">
-                        <h3>Studi Kasus Jaringan Komputer</h3>
-                        <p>Analisis topologi jaringan dan implementasi keamanan pada sebuah kasus nyata.</p>
+                        <h3>LaluLintasKu — Statistik & Laporan</h3>
+                        <p>Versi demo atau percobaan dari fitur statistik dan laporan LaluLintasKu untuk demonstrasi fungsionalitas.</p>
                     </div>
                 </div>
 
                 <div class="portfolio-item">
-                    <img src="https://via.placeholder.com/400x200.png?text=Proyek+3" alt="Gambar Proyek 3">
+                    <img src="https://via.placeholder.com/400x200.png?text=Traffic+Alert+-+Awal" alt="Gambar Traffic Alert SMA">
                     <div class="portfolio-item-content">
-                        <h3>Analisis Data Penjualan</h3>
-                        <p>Pengolahan dan visualisasi data penjualan menggunakan Python dan library Matplotlib.</p>
+                        <h3>Traffic Alert SMA</h3>
+                        <p>Tahap awal pengembangan proyek Traffic Alert SMA, termasuk fitur voting dan status tengah.</p>
+                    </div>
+                </div>
+
+                <div class="portfolio-item">
+                    <img src="https://via.placeholder.com/400x200.png?text=Proyek+Lainnya" alt="Gambar Proyek Lainnya">
+                    <div class="portfolio-item-content">
+                        <h3>Judul Proyek Lain</h3>
+                        <p>Deskripsi singkat mengenai proyek atau tugas lainnya yang Anda kerjakan.</p>
                     </div>
                 </div>
             </div>
