--- a/index.html
+++ b/index.html
@@ -136,21 +136,21 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item">
                     <div class="portfolio-item-content">
-                        <h3><a href="https://github.com/akun_anda/proyek_satu" target="_blank">LaluLintasKu — Statistik & Laporan</a></h3>
+                        <h3><a href="https://itsderr.github.io/LAPORAN-LALU-LINTAS-REALTIME/#" target="_blank">LaluLintasKu — Statistik & Laporan</a></h3>
                         <p>Bagian **Full Siap**</p>
                     </div>
                 </div>
 
                 <div class="portfolio-item">
                     <div class="portfolio-item-content">
-                        <h3><a href="https://github.com/akun_anda/proyek_dua" target="_blank">LaluLintasKu — Statistik & Laporan</a></h3>
+                        <h3><a href="https://itsderr.github.io/MENCOBA-TEST-PERCOBAAN/" target="_blank">LaluLintasKu — Statistik & Laporan</a></h3>
                         <p>Bagian **Demo/Percobaan**</p>
                     </div>
                 </div>
 
                 <div class="portfolio-item">
                     <div class="portfolio-item-content">
-                        <h3><a href="https://github.com/akun_anda/proyek_tiga" target="_blank">Traffic Alert SMA (Voting + Status Tengah)</a></h3>
+                        <h3><a href="https://itsderr.github.io/Edukasi/" target="_blank">Traffic Alert SMA (Voting + Status Tengah)</a></h3>
                         <p>Bagian **Awal mula pengembangan**</p>
                     </div>
                 </div>
