--- a/index.html
+++ b/index.html
@@ -112,6 +112,30 @@
             font-size: 14px;
             color: #777;
         }
+        
+        /* Bagian Kontak (BARU) */
+        #kontak {
+            margin-top: 60px;
+            padding-top: 30px;
+            border-top: 1px solid #e0e0e0;
+            text-align: center;
+        }
+
+        .contact-info p {
+            font-size: 16px;
+            line-height: 1.8;
+        }
+
+        .contact-info a {
+            color: #3498db;
+            text-decoration: none;
+            font-weight: 500;
+        }
+
+        .contact-info a:hover {
+            text-decoration: underline;
+        }
+
     </style>
 </head>
 <body>
@@ -156,7 +180,16 @@
                 </div>
             </div>
         </section>
-    </div>
+
+        <section id="kontak">
+            <h2>Hubungi Saya</h2>
+            <div class="contact-info">
+                <p><strong>Nama:</strong> Der R.H</p>
+                <p><strong>Email:</strong> <a href="mailto:deryl.ramadhan14@sma.belajar.id">deryl.ramadhan14@sma.belajar.id</a></p>
+                <p><strong>Telepon:</strong> <a href="tel:081233508133">081233508133</a></p>
+            </div>
+        </section>
+        </div>
 
 </body>
 </html>
