--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Der R.H</title>
+    <title>Titik Terang</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
             background-color: var(--bg-color-1);
             color: var(--text-color-light);
             scroll-behavior: smooth;
-            overflow-x: hidden; /* Mencegah scroll horizontal */
+            overflow-x: hidden;
         }
 
         /* Header */
@@ -38,8 +38,10 @@
             position: fixed;
             width: 100%;
             top: 0;
+            left: 0;
             z-index: 1000;
             transition: background-color 0.3s ease;
+            box-sizing: border-box;
         }
 
         header.scrolled {
@@ -64,6 +66,20 @@
 
         nav a:hover {
             color: var(--accent-color);
+        }
+
+        /* Responsive Navbar */
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                padding: 15px 20px;
+            }
+            nav {
+                margin-top: 10px;
+            }
+            nav a {
+                margin: 0 10px;
+            }
         }
 
         /* Bagian Utama */
@@ -125,8 +141,8 @@
             position: absolute;
             height: 100%;
             width: 50%;
-            background-color: var(--bg-color-1); /* Sesuaikan dengan warna latar belakang halaman */
-            z-index: 5; /* Pastikan di atas konten */
+            background-color: var(--bg-color-1);
+            z-index: 5;
             transition: transform 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         }
 
@@ -213,7 +229,7 @@
 <body>
 
     <header id="main-header">
-        <div class="logo">Portofolio Saya</div>
+        <div class="logo">Titik Terang</div>
         <nav>
             <a href="#proyek">Proyek</a>
             <a href="#kontak">Kontak</a>
@@ -223,8 +239,8 @@
     <div class="main-wrapper">
         <section class="section section-1" id="beranda">
             <div class="section-content">
-                <h1>Selamat Datang di Portofolio Saya</h1>
-                <p>Jelajahi karya terbaik yang telah saya kembangkan.</p>
+                <h1>Selamat Datang di Titik Terang</h1>
+                <p>Informasi terkini akan selalu kami update setiap waktu, dikembangkan oleh Pembuat web ini.</p>
             </div>
         </section>
 
@@ -245,9 +261,9 @@
             <div class="curtain-line left"></div>
             <div class="curtain-line right"></div>
             <div class="section-content contact-content">
-                <h2>Hubungi Saya</h2>
+                <h2>Hubungi Kami</h2>
                 <p>
-                    Tertarik untuk berdiskusi lebih lanjut atau memiliki proyek yang ingin dikerjakan bersama? Jangan ragu untuk menghubungi saya melalui informasi di bawah ini.
+                    Tertarik untuk berdiskusi lebih lanjut atau memiliki proyek yang ingin dikerjakan bersama? Jangan ragu untuk menghubungi kami melalui informasi di bawah ini.
                 </p>
                 <p>
                     <strong>Nama:</strong> Der R.H<br>
@@ -274,7 +290,6 @@
                     section.classList.remove('hide');
                 } else {
                     sectionContent.classList.remove('visible');
-                    // Tambahkan logika untuk efek "menutup" saat menggulir ke atas
                     const prevSection = sections[index - 1];
                     if (prevSection && prevSection.getBoundingClientRect().top > 0) {
                         section.classList.add('hide');
